--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,12 +30,26 @@ table {
 }
 
 td {
-
+	text-align: center;
 }
 
 tr {
 	width: 100%;
-/*	float: left;*/
+}
+
+
+button {
+	font-family: 'Bangers', cursive;
+	font-size: .8em;
+}
+
+h2 {
+	font-family: 'Bangers', cursive;
+	text-decoration: underline;
+}
+
+.blank {
+	margin: auto;
 }
 
 .panelOne, .panelThree {
@@ -54,6 +68,10 @@ tr {
 
 }
 
+#blanks {
+ 	text-align: center;
+}
+
 #stump {
 	width: 140px;
 	height: 140px;
@@ -65,8 +83,8 @@ tr {
 }
 
 #trumpBottom {
-	width: 110px;
-	height: 130px;
+	width: 50%;
+	height: 50%
 	margin: 20px;
 }
 .gameTitle {
@@ -83,12 +101,10 @@ tr {
 	color: red;
 }
 
-button {
-	font-family: 'Bangers', cursive;
-	font-size: .8em;
+#trumpContainer {
+	width: 10%;
 }
 
-h2 {
-	font-family: 'Bangers', cursive;
-	text-decoration: underline;
+.gameRow {
+	width: 100%;
 }
